--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -17,10 +17,8 @@
     height: 40.5em;
     margin-left:10em;
 }
-.title {
-    font-size:3em;
 
-}
+
 .parrafo {
     
     margin-left:20em;
@@ -39,7 +37,7 @@
         1em;
        
      }
-     
+  
      .parrafo {
         margin:0px;
      }
@@ -49,9 +47,7 @@
     }
      
 }
-.pantallaGrande {
-    margin-right:20em
-}
+
 @media (min-width:712px) and (max-width:2500px) {
     .boximg .img1 {
         width: 20em;
@@ -63,7 +59,18 @@
         height: 28em;
         margin-left:1em;
     }
-
+    .title {
+        font-family: "Cairo";
+        text-align: center;
+        color: #FFF;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 10vh;
+        letter-spacing: 1px;
+        line-height:2
+    }
     
 }
 @media (max-width:1500px){
@@ -72,6 +79,13 @@
         display:none;
      }
 }
+
+
+
+
+
+
+
 
 
               
@@ -112,87 +126,51 @@
 	background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
 }
 
-.container {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	place-items: center;
-	overflow: hidden;
-}
+
+
+
+
+
 
 .title {
-	position: absolute;
-	top: 50%;
-	left: 60%;
-	transform: translate(-50%, -50%);
-
+	font-family: "Cairo";
+	text-align: center;
+	color: #FFF;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 10vh;
+	letter-spacing: 1px;
+	line-height:2
 }
+
 .title h1 {
-	font-size: 10vmin;
-	font-weight: 900;
-	font-family: "Montserrat", sans-serif;
-	color: black;
+	background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+	background-size: cover;
+	color: transparent;
+	-moz-background-clip: text;
+	-webkit-background-clip: text;
+	text-transform: uppercase;
+	font-size: 2em;
+	margin: 10px 0;
 }
+/* styling my button */
 
-.ghost {
-	width: 8vmin;
-	height: 12vmin;
-	background-color: var(--white);
-	background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
-	background-image: radial-gradient(ellipse at 35% 40%, #000 8%, transparent 0%),
-		radial-gradient(ellipse at 65% 40%, #000 8%, transparent 0%),
-		radial-gradient(ellipse at 50% 60%, #000 8%, transparent 0%);
-	border-radius: 100% / 70% 70% 0% 0%;
-	transform: translateX(100em) rotateZ(-90deg);
-	position: relative;
-	opacity: 0.9;
-	mix-blend-mode: exclusion;
-	animation: ghostMove 4s ease-out infinite;
-}
-@keyframes ghostMove {
-	0% {
-		transform: translateX(30em) rotateZ(-90deg);
-	}
-	100% {
-		transform: translateX(-35em) rotateZ(-90deg);
-	}
-}
-.ghost div {
+.white-mode {
+	text-decoration: none;
+	padding: 7px 10px;
+	background-color: #122;
+	border-radius: 3px;
+	color: #FFF;
+	transition: .35s ease-in-out;
 	position: absolute;
-	width: 20%;
-	background-color: var(--white);
-	background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
-}
-.ghost div:nth-of-type(1) {
-	height: 7vmin;
-	left: 0;
-	bottom: -6vmin;
-	border-radius: 100% / 0% 0% 50% 50%;
-}
-.ghost div:nth-of-type(2),
-.ghost div:nth-of-type(4) {
-	height: 4vmin;
-	left: 20%;
-	bottom: -3vmin;
-	border-radius: 100% / 50% 50% 0% 0%;
-	background-color: transparent;
-}
-.ghost div:nth-of-type(3) {
-	height: 4vmin;
-	left: 40%;
-	bottom: -3.95vmin;
-	border-radius: 100% / 0% 0% 60% 60%;
-	background-color: var(--white);
-}
-.ghost div:nth-of-type(4) {
-	left: 60%;
-}
-.ghost div:nth-of-type(5) {
-	height: 3vmin;
-	left: 80%;
-	bottom: -2.9vmin;
-	border-radius: 100% / 0% 0% 70% 70%;
-	background-color: var(--white);
+	left: 15px;
+	bottom: 15px;
+	font-family: "Montserrat";
 }
 
-              
+.white-mode:hover {
+	background-color: #FFF;
+	color: #122;
+}
