--- a/src/componentes/Header.css
+++ b/src/componentes/Header.css
@@ -22,27 +22,38 @@
 
 
 .parrafo {
-    
-    
+   
+    align-items:center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content:center;
+ 
 }
+
+.title span {
+    
+    font-size:5em;
+}
+.title {
+ text-align:center;  
+ 
+}
+
+
+
 @media (max-width: 712px) {
     .boximg img {
         margin: 5em; 
         width: 10em;
         height: 15em;
      }
-     .parrafo .container .title {
+     .parrafo .contenedor .title {
         font-size: 
         1em;
        
      }
   
-     .parrafo {
-        margin:0px;
-     }
+    
      .boximg {
         
         display: flex;
@@ -62,22 +73,8 @@
         height: 28em;
         margin-left:1em;
     }
-    .title {
-        font-family: "Cairo";
-        text-align: center;
-        color: #FFF;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 10vh;
-        letter-spacing: 1px;
-        line-height:2
-    }
-    .parrafo {
-        display:flex;
-        justify-content:center;
-    }
+  
+   
   
 }
 @media (max-width:1500px){
@@ -92,8 +89,7 @@
     transition: .5s, color .10s;
         -webkit-transition: .5s, color .10s;
         -moz-transition: .5s, color .10s;
-        margin-top:3em;
-        
+       
 }
 .grow:hover{
     transform: scale3d(1.5, 1.5, 0.3);
@@ -130,45 +126,3 @@
 
 
 
-.title {
-	font-family: "Cairo";
-	text-align: center;
-	color: #FFF;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 10vh;
-	letter-spacing: 1px;
-	line-height:2
-}
-
-.title h1 {
-	background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
-	background-size: cover;
-	color: transparent;
-	-moz-background-clip: text;
-	-webkit-background-clip: text;
-	text-transform: uppercase;
-	font-size: 2em;
-	margin: 10px 0;
-}
-/* styling my button */
-
-.white-mode {
-	text-decoration: none;
-	padding: 7px 10px;
-	background-color: #122;
-	border-radius: 3px;
-	color: #FFF;
-	transition: .35s ease-in-out;
-	position: absolute;
-	left: 15px;
-	bottom: 15px;
-	font-family: "Montserrat";
-}
-
-.white-mode:hover {
-	background-color: #FFF;
-	color: #122;
-}
