--- a/src/componentes/Hardware.css
+++ b/src/componentes/Hardware.css
@@ -1,11 +1,20 @@
-.container {
+.contenedorVideo {
   margin-top: 10em;
     display:flex;
     justify-content: center;
     align-items: center;
+    gap:1em;
 }
 @media (min-width:712px) and (max-width:2500px) {
     .container {
         margin-left:11em;
     }
+}
+@media (min-width:200px) and (max-width:700px) {
+.contenedorVideo {
+display:flex;
+flex-direction:column;
+align-items:center;
+
+}
 }
