--- a/src/componentes/Navb.css
+++ b/src/componentes/Navb.css
@@ -23,3 +23,6 @@ p {
         -webkit-transform: scale3d(1.5, 1.5, 0.3);
         -moz-transform: scale3d(1.5, 1.5, 0.3);
 }
+.spanLogo {
+display:flex;
+flex-direction:column;}
