--- a/src/componentes/Hardware.css
+++ b/src/componentes/Hardware.css
@@ -5,6 +5,7 @@
     align-items: center;
     gap:1em;
 }
+
 @media (min-width:712px) and (max-width:2500px) {
     .container {
         margin-left:11em;
@@ -18,3 +19,61 @@ align-items:center;
 
 }
 }
+
+
+
+
+
+.container {
+    display: flex;
+  /*   border:1px solid red; */
+    height: 100%;
+    align-items: center;
+  }
+  
+  svg {
+      display: block;
+      font: 8.5em 'Montserrat';
+      width: 460px;
+      height: 300px;
+      margin: 0 auto;
+      
+  }
+  
+  .text-copy {
+      fill: none;
+      stroke: white;
+      stroke-dasharray: 6% 29%;
+      stroke-width: 5px;
+      stroke-dashoffset: 0%;
+      animation: stroke-offset 5.5s infinite linear;
+  }
+  
+  .text-copy:nth-child(1){
+      stroke:#ffc66f ;
+      animation-delay: -1;
+  }
+  
+  .text-copy:nth-child(2){
+      stroke: #009757;
+      animation-delay: -2s;
+  }
+  
+  .text-copy:nth-child(3){
+      stroke: #006e9b;
+      animation-delay: -3s;
+  }
+  
+  .text-copy:nth-child(4){
+      stroke: #BD0034;
+      animation-delay: -4s;
+  }
+  
+  .text-copy:nth-child(5){
+      stroke: #FDB731;
+      animation-delay: -5s;
+  }
+  
+  @keyframes stroke-offset{
+      100% {stroke-dashoffset: -35%;}
+  }
