--- a/src/componentes/Navb.css
+++ b/src/componentes/Navb.css
@@ -26,3 +26,9 @@ p {
 .spanLogo {
 display:flex;
 flex-direction:column;}
+
+@media only screen and (max-width: 980px) {
+.d-flex.justify-content-end.align-items-center.visible-md-flex.visible-lg-flex.visible-xl-flex {
+display: none;
+}
+}
