--- a/src/componentes/ElSendero.css
+++ b/src/componentes/ElSendero.css
@@ -1,7 +1,8 @@
 .contenedorSendero {
 display:flex;
 justify-content:center;
-margin-top:5em}
+margin-top:5em;
+gap:3em}
 
 @media (max-width: 712px) {
 .contenedorSendero div iframe{
