--- a/src/componentes/ElSendero.css
+++ b/src/componentes/ElSendero.css
@@ -2,10 +2,16 @@
 display:flex;
 justify-content:center;
 margin-top:5em;
-gap:3em}
-
+gap:3em;
+width:40em;
+height:35em;
+}
+.contenedorSendero img {
+border-radius:2em;
+padding:1em;
+}
 @media (max-width: 712px) {
-.contenedorSendero div iframe{
+.contenedorSendero div img{
 width:25em;
 }
 }
