--- a/src/componentes/Nosotrxs.css
+++ b/src/componentes/Nosotrxs.css
@@ -7,13 +7,21 @@
 .imgnos {
   border-radius:1em;
   width: 30em;
-  height: 6em;
+  height: 18em;
 }
 .noscard1 {
   display:flex;
   justify-content: space-between;
   margin-top:2em;
+  margin-left:6em;
+  margin-right:6em;
+}
+.noscard2 {
+  display:flex;
+  justify-content: center;
+  margin-top:2em;
   margin-left:2em;
+  gap:2em;
 }
 h2 {
   text-align: center;
